[tool.poetry]
name = "cjkvi-ids-unicode"
version = "0.1.0"
description = ""
authors = ["Bryan Kok <bryan.wyern1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tqdm = "^4.56.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
driver = "cjkvi_ids_unicode.driver:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
